<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:background="#805397FB"
    android:orientation="vertical"
    android:padding="0dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="220dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/homepage_bottom_sheet_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homepage_bottom_sheet_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#007280CA">


            <Button
                android:id="@+id/addingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Stop"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/nextPageButton"
                app:layout_constraintStart_toEndOf="@+id/myLocationButton"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/myLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/location_button"
                android:enabled="false"
                android:paddingLeft="3dp"
                android:paddingTop="3dp"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/homepage_bottom_sheet"
                app:srcCompat="@android:drawable/ic_menu_mylocation"
                tools:ignore="NotSibling" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/nextPageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/next_page_button"
                android:paddingLeft="3dp"
                android:paddingTop="3dp"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_navigate_next_24"
                tools:layout_editor_absoluteX="291dp"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cyclists_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        android:background="@drawable/rounded"
        android:orientation="horizontal"
        android:padding="7dp">


        <TextView
            android:id="@+id/users"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:text="@string/cyclists_number"
            android:textColor="@color/indigo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/UserNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:text="1"
            android:textColor="@color/indigo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/users"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/decrementButton"
            android:layout_width="58dp"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:onClick="Decrement"
            android:text="@string/decrement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/incrementButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints,UsingOnClickInXml" />

        <Button
            android:id="@+id/incrementButton"
            android:layout_width="58dp"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="36dp"
            android:onClick="increment"
            android:text="@string/increment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toEndOf="@+id/UserNumber"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints,UsingOnClickInXml" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homepage_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/addingBtn"
        android:layout_alignParentEnd="true"
        tools:ignore="ObsoleteLayoutParam" />

</LinearLayout>