...
    <string name="enter_email">Please enter your email</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="error_enter_password">Please enter a password</string>

    <!-- Homepage Strings -->
    <string name="current_location">Current Location</string>
    <string name="title">Title</string>
    <string name="location_button">Location Button</string>
    <string name="next_page_button">Next Page Button</string>
    <string name="cyclists_number">Cyclists:</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="continue_with_current_journey">Continue Current Journey</string>
    <string name="continue_with_newly_set_journey">Create New Journey</string>
    <string name="add_stop_button" />
    <string name="no_current_journey">There is no current journey</string>
    <string name="location_already_exists">Location already in list</string>
    <string name="no_more_than_4_users">Cannot have more than 4 users</string>
    <string name="no_less_than_1_user">Cannot have less than one user</string>
    <string name="adding_stop">Adding Stop</string>
    <string name="change_stop_location">Changing Location Of Stop</string>
    <string name="user_location">User Location</string>
    <string name="cant_remove_location">Cannot remove location</string>
    <string name="alert_planner">Planner Alert</string>
    <string name="alert_message_1">There is already a planned journey that you are currently using.</string>
    <string name="alert_message_2"> Would you like to continue with the current journey or with the newly created one?</string>
...
    <!-- Other strings -->
    <string name="app_name">Backstreet Cycles</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidmFuZGFkZHkiLCJhIjoiY2wxM3AyYzRwMDMyNTNka2E5ZDJyZmxjeSJ9.X21KVzaVpkQhADD-YQw-yA</string>
    <string name="tfl_url">https://api.tfl.gov.uk/BikePoint/</string>
    <string name="user_location_permission_explanation">Permission needed</string>
    <string name="user_location_permission_not_granted">You didn\'t grant permission location</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="NO_PERSON_MATCH">No people matched the query.</string>
    <string name="vintage_cycle_image">backstreet_cycle_logo</string>
    <string name="starting_point">startingPoint</string>
    <string name="pick_up_point">pickUpPoint</string>
...
